Changed lanjut = continue

--- a/src/app/pages/seat-picker/seat-picker-page.component.html
+++ b/src/app/pages/seat-picker/seat-picker-page.component.html
@@ -8,6 +8,6 @@
     [ticketCategories]="ticketCategories"
     [seatConfiguration]="seatConfiguration"
     (goBackEvent)="handleGoBack()"
-    (lanjutEvent)="handleLanjut($event)"
+    (continueEvent)="handleContinue($event)"
   ></app-seat-picker>
 </div>
