--- a/src/app/pages/seat-picker/seat-picker.html
+++ b/src/app/pages/seat-picker/seat-picker.html
@@ -159,7 +159,7 @@
 
   <!-- BUTTON -->
 
-  <button class="next-btn" (click)="lanjut()">
+  <button class="next-btn" (click)="continue()">
     Continue ({{ selectedSeatDetails.length }} tickets · Rp {{ formatRupiah(totalPrice) }})
   </button>
 
