--- a/src/app/pages/event-detail/event-detail.html
+++ b/src/app/pages/event-detail/event-detail.html
@@ -23,14 +23,9 @@
     <div class="meta">
       <span>{{ event.location }}</span>
       <span class="dot">•</span>
-      <span>{{ event.duration }}</span>
+      <span>{{ event.date }}</span>
       <span class="dot">•</span>
-      <span>{{ event.ageRating }}</span>
-    </div>
-
-    <div class="rating-box">
-      <span class="star">★</span>
-      <span class="rating">{{ event.rating }}</span>
+      <span>{{ event.time }}</span>
     </div>
 
     <h3 class="subtitle">EVENT DESCRIPTION</h3>
@@ -38,6 +33,6 @@
       {{ event.description || 'There is no description for this event yet.' }}
     </p>
 
-    <button class="buy-btn" (click)="buyTicket()">View Schedule & Event List</button>
+    <button class="buy-btn" (click)="buyTicket()">Select Seats</button>
   </div>
 </div>
