Added cancel booking button that works as long as it's not 7 days prior to the event.

--- a/src/app/pages/e-ticket/e-ticket.html
+++ b/src/app/pages/e-ticket/e-ticket.html
@@ -65,5 +65,13 @@
     </div>
   </div>
 
+  <button
+    class="cancel-btn"
+    (click)="cancelBooking()"
+    [disabled]="isCancelDisabled"
+  >
+    Cancel Booking
+  </button>
+
   <div class="hint">Screenshot this page to save the E-Ticket in your gallery 📱</div>
 </div>
