Added & implemented Notifications. My-ticket = Notifications

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -129,12 +129,12 @@
   </main>
 
   <!-- BOTTOM NAVBAR -->
-  <nav class="bottom-nav">
+  <!--<nav class="bottom-nav">
     <button class="nav-item active" type="button">
       <div class="nav-icon">🏠</div>
       <div class="nav-label">Home</div>
     </button>
-    <button class="nav-item" type="button" (click)="router.navigate(['/my-tickets'])">
+    <button class="nav-item" type="button" (click)="router.navigate(['/notifications'])">
       <div class="nav-icon">🎟️</div>
       <div class="nav-label">Tickets</div>
     </button>
@@ -142,5 +142,5 @@
       <div class="nav-icon">👤</div>
       <div class="nav-label">Account</div>
     </button>
-  </nav>
+  </nav>-->
 </div>
