--- a/src/app/pages/notifications/notifications.html
+++ b/src/app/pages/notifications/notifications.html
@@ -2,7 +2,7 @@
   <!-- HEADER -->
   <div class="header">
     <button class="back-btn" (click)="goHome()">«</button>
-    <div class="title">My Ticket</div>
+    <div class="title">Notifications</div>
   </div>
 
   <!-- JIKA TIDAK ADA TIKET -->
