removed alert at login & warning in home.html

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -20,7 +20,7 @@
       <div class="user-pill" (click)="toggleUserMenu()">
         <div class="avatar-wrap">
           <div class="avatar-glow"></div>
-          <div class="avatar">{{ userName?.[0] || 'U' }}</div>
+          <div class="avatar">{{ userName[0] || 'U' }}</div>
         </div>
 
         <div class="user-meta">
