--- a/src/app/pages/checkout/checkout.html
+++ b/src/app/pages/checkout/checkout.html
@@ -61,5 +61,5 @@
   </div>
 
   <!-- BUTTON BAYAR -->
-  <button class="pay-btn" (click)="bayar()">Pay Now</button>
+  <button class="pay-btn" (click)="pay()">Pay Now</button>
 </div>
