Add and fully implemented forgot + reset password

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -35,6 +35,9 @@
       <div class="menu-item" *ngIf="userRole === 'organizer'" (click)="goOrganizer()">
         Dashboard
       </div>
+      <div class="menu-item" (click)="goToForgotPassword()">
+        Forgot Password
+      </div>
       <div class="menu-item" (click)="logout()">Logout</div>
     </div>
   </header>
