--- a/src/app/pages/admin-dashboard/admin-dashboard.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.html
@@ -30,6 +30,9 @@
 
     <div class="user-menu" *ngIf="showMenu">
       <div class="menu-item" (click)="goHome()">Homepage</div>
+      <div class="menu-item" (click)="goToForgotPassword()">
+        Forgot Password
+      </div>
       <div class="menu-item" (click)="logout()">Logout</div>
     </div>
   </header>
