ChangeDetectorRef, *_id to *Id, spinner for event detail, dev button to select all seats, (work in progress) trying to integrate frontend with backend

--- a/src/app/pages/event-detail/event-detail.html
+++ b/src/app/pages/event-detail/event-detail.html
@@ -1,3 +1,8 @@
+<div class="loading-container" *ngIf="!event">
+  <div class="spinner"></div>
+  <p>Loading Event...</p>
+</div>
+
 <div class="event-detail-page" *ngIf="event">
   <div class="poster-container">
     <img class="poster" [src]="event.poster" [alt]="event.title" />
