--- a/src/app/pages/seat-picker/seat-picker.html
+++ b/src/app/pages/seat-picker/seat-picker.html
@@ -132,6 +132,8 @@
     </div>
   </div>
 
+  <button class="dev-btn" (click)="selectAllSeats()">DEV: Select All</button>
+
   @if (showContinueButton) {
 
   <button class="next-btn" (click)="continue()">
