Implemented waitlist. Commented seat picker dev button.

--- a/src/app/pages/seat-picker/seat-picker.html
+++ b/src/app/pages/seat-picker/seat-picker.html
@@ -132,7 +132,7 @@
     </div>
   </div>
 
-  <button class="dev-btn" (click)="selectAllSeats()">DEV: Select All</button>
+  <!-- <button class="dev-btn" (click)="selectAllSeats()">DEV: Select All</button> -->
 
   @if (showContinueButton) {
 
